# TerraFERMA

./: .gitignore  AUTHORS  CMakeLists.txt  README  README.md  README.rst  poisson.bml
buckettools/: .hgsubs  CMakeLists.txt  DiagnosticsFile.cpp  StatFile.cpp  StatFile.h  buckettools.h
buckettools/cpp/: Bucket.cpp  BucketDolfinBase.cpp  BucketPETScBase.cpp  CMakeLists.txt  ConvergenceFile.cpp  Detectors.cpp  DetectorsFile.cpp  DiagnosticsFile.cpp  DolfinPETScBase.cpp  FieldSplit.cpp  FunctionBucket.cpp  FunctionalBucket.cpp  GenericDetectors.cpp  GlobalPythonInstance.cpp  InitialConditionExpression.cpp  KSPConvergenceFile.cpp  Logger.cpp  MPIBase.cpp  PointDetectors.cpp  PythonDetectors.cpp  PythonExpression.cpp  PythonInstance.cpp  PythonPeriodicMap.cpp  ReferencePoint.cpp  ReferencePoints.cpp  RegionsExpression.cpp  SemiLagrangianExpression.cpp  SigIntEventHandler.cpp  SignalHandler.cpp  SolverBucket.cpp  SpudBase.cpp  SpudBucket.cpp  SpudDiagnosticsFile.cpp  SpudFunctionBucket.cpp  SpudFunctionalBucket.cpp  SpudMesh.cpp  SpudSolverBucket.cpp  SpudSystem.cpp  SpudSystemBucket.cpp  SpudSystemsSolverBucket.cpp  (+8 more)
buckettools/doc/: makedoc
buckettools/example/: example.bml
buckettools/include/: BoostTypes.h  Bucket.h  BucketDolfinBase.h  BucketPETScBase.h  BucketTools.h  ConvergenceFile.h  Detectors.h  DetectorsFile.h  DiagnosticsFile.h  DolfinBoostTypes.h  DolfinPETScBase.h  EventHandler.h  FieldSplit.h  FunctionBucket.h  FunctionalBucket.h  GenericDetectors.h  GenericSolverBucket.h  GlobalPythonInstance.h  InitialConditionExpression.h  KSPConvergenceFile.h  Logger.h  MPIBase.h  PointDetectors.h  PythonDetectors.h  PythonExpression.h  PythonInstance.h  PythonPeriodicMap.h  ReferencePoint.h  ReferencePoints.h  RegionsExpression.h  SemiLagrangianExpression.h  SigIntEventHandler.h  SignalHandler.h  SolverBucket.h  SpudBase.h  SpudBucket.h  SpudDiagnosticsFile.h  SpudFunctionBucket.h  SpudFunctionalBucket.h  SpudMesh.h  (+19 more)
buckettools/python/: buckettools.py
buckettools/schemas/: buckettools.rnc  buckettools.rng  element.rnc  element.rng  function.rnc  function.rng  generic_function.rng  geometry.rnc  geometry.rng  io.rnc  io.rng  simulations.rnc  simulations.rng  solvers.rnc  solvers.rng  spud_extension.rnc  spud_extension.rng  system.rnc  system.rng  terraferma.rnc  terraferma.rng  timestepping.rnc  timestepping.rng  ufl.rnc  ufl.rng
buckettools/scripts/: bml2tfml  bucketstatplot  combine_checkpoint_pvds  combine_pvds  complete_ufl_template.py  cpp_from_options  cpp_from_options.py  extract_submesh  extract_subvtus  gmsh_physical_id_meshfunctions.py  split_mesh  systemwrappers_from_options  systemwrappers_from_options.py  tfbuild  tfgmsh2xdmf  tfplot  tfplot_meshfunctions  tfsimulationharness  tftimeaveragexdmf  tfvtudepthaverage  tfvtudiff  tfxdmftk  timeaverage_vtu  ufc_from_options  ufc_from_options.py  ufl_from_options  ufl_from_options.py  update_options  update_options.py  updatepvtus  updateshml  updatetfml  write_systems_wrapper.py  write_systems_wrapper_spud.py  write_ufl_files.py  write_ufl_files_spud.py
buckettools/ufc/: CMakeLists.txt
buckettools/ufl/: CMakeLists.txt  Divergence.ufl.template
cmake/post-install/: CMakeLists.txt
cpp/: CMakeLists.txt  CMakeLists.txt.in  main.cpp
tests/: CMakeLists.txt  magmawaves_2dfile.tfml  magmawaves_2drectangle.tfml  magmawaves_2dsquare.tfml  magmawaves_3dbox.tfml  magmawaves_3dcube.tfml  magmawaves_checkpoint_2.tfml  test_tfsolitarywave.shml  testtfsolitarywave.py
tests/adaptive_dt_1d/: CMakeLists.txt  adaptdt.bml  adaptdt.shml  adaptdt.tfml  tests.py
tests/alt_adaptive_dt_1d/: CMakeLists.txt  adaptdt.bml  adaptdt.shml  adaptdt.tfml  tests.py
tests/alt_courant_1d/: CMakeLists.txt  courant.bml  courant.shml  courant.tfml  tests.py
tests/courant_1d/: CMakeLists.txt  courant.bml  courant.shml  courant.tfml  tests.py
tests/dg_advection_1d_vi/: CMakeLists.txt  advection.bml  advection.shml  advection.tfml  interval.geo  interval.msh  interval.xml  interval_facet_region.xml  interval_physical_region.xml  tests.py
tests/diamond_validation/: CMakeLists.txt  diamond_validation.shml  tests.py
tests/funtional_meshfunction_output/: functional.shml  functional.tfml
tests/madds1/: CMakeLists.txt  madds1.bml  madds1.shml  madds1.tfml
tests/madds1-gmsh/: CMakeLists.txt  madds1.bml  madds1.shml  madds1.tfml  ridgemesh.geo  ridgemesh.msh  tests.py
tests/magmawaves/: CMakeLists.txt  magmawaves.bml  magmawaves.shml  magmawaves.tfml  tests.py
tests/mesh/: square.geo  square.msh
tests/mms_advdiff_excludemass/: mesh.geo  mms.shml  mms.tfml
tests/mms_nonlinear_coupled_poisson/: nonlinear_coupled_poisson.shml  nonlinear_coupled_poisson_nonlinearsystems.tfml  nonlinear_coupled_poisson_nonlinearsystems_relax.tfml  nonlinear_coupled_poisson_picard.tfml  nonlinear_coupled_poisson_snes.tfml
tests/mms_poisson/: poisson.shml  poisson.tfml
tests/mms_poisson_bdm/: poisson.shml  poisson.tfml
tests/mms_poisson_dg/: poisson.shml  poisson.tfml
tests/mms_poisson_drt/: poisson.shml  poisson.tfml
tests/mms_poisson_neumann/: poisson.shml  poisson_m.tfml  poisson_ns.tfml  poisson_rp.tfml
tests/mms_poisson_periodic/: poisson.shml  poisson.tfml  poisson_double.tfml
tests/mms_poisson_rt/: poisson.shml  poisson.tfml
tests/mms_poisson_uflacs/: poisson.shml  poisson.tfml
tests/mms_stokes_isoviscous_p1b3p1/: stokes.shml  stokes.tfml
tests/mms_stokes_isoviscous_p2b3_p1dg/: stokes.shml  stokes.tfml
tests/mms_stokes_isoviscous_pn+1pn/: stokes.shml  stokes.tfml
tests/mms_stokes_isoviscous_pn+1pn_regions/: square_regions.geo  stokes.shml  stokes_fs1.tfml  stokes_fs3.tfml
tests/mms_stokes_isoviscous_pnb3pn/: stokes.shml  stokes.tfml
tests/neumann_poisson/: CMakeLists.txt  neumann_poisson.bml  neumann_poisson.shml  neumann_poisson.tfml  tests.py
tests/old_tests/: magmawaves.tfml  magmawaves_magma_2.xml  test.py
tests/periodic/: periodic.shml  periodic.tfml
tests/poisson/: CMakeLists.txt  poisson.bml  poisson.shml  poisson.tfml
tests/projection_cpp/: CMakeLists.txt  projection.bml  tests.py  (+3 more)
tutorials/: CMakeLists.txt
(+332 files in other folders)
